--- a/style.css
+++ b/style.css
@@ -19,9 +19,15 @@ body {
     height: 100vh;
   }
   
-  .background { 
+  .backgroundContainer {
+    width: 100%;
+    height: 100vh;
     background-image: url(/backgrounds/clear.png);
     background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .weather-card {
