--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    transition: background-image 0.5s ease;
   }
   
   .backgroundContainer {
@@ -28,6 +29,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-image 1s ease;
   }
 
   .weather-card {
