--- a/style.css
+++ b/style.css
@@ -1,11 +1,22 @@
 
+.title {
+  font-size: 60px;
+  font-weight: bold;
+  margin: 16px;
+  text-align: center;
+  color: #000000;
+  position: absolute;
+  top: 120px;
+  
+  z-index: 2; 
+}
 .time {
     position: relative;
-    top: 15px; /* Adjust this value to move the time element up or down */
+    top: 15px; 
     text-align: center;
     font-size: 60px;
     font-weight: bold;
-    margin-bottom: 10px; /* Add margin for spacing */
+    margin-bottom: 10px; 
   }
   
 
@@ -118,4 +129,68 @@ body {
   }
   
 
+  .bookmarks-container {
+    position: absolute;
+    top: 10px; 
+    left: 10px; 
+    z-index: 1;
+  }
   
+  
+  .dropbtn {
+    background-color: #3498db;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+  
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #e9e7e7;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    transition: opacity 0.3s ease;
+    border-radius: 4px;
+  }
+  
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+    opacity: 1;
+    
+  }
+
+  .dropdown-item {
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  
+
+  .dropdown-item:hover {
+    color: #4548f7; 
+    cursor: pointer;
+  }
+
+
+  .bookmark-button {
+    background-color: #4CAF50;
+    color: white; 
+    padding: 10px 20px; 
+    font-size: 16px; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+    margin-top: 10px;
+  }
+  
+  .bookmark-button:hover {
+    background-color: #45a049; 
+  }
